--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,38 @@ header {
   footer a {
     color: #024e76;
   }
+
+  section {
+    padding: 60px;
+  }
+
+/* Hero Style Start */
+.hero {
+  background-image: url("../images/hero-bg.jpeg");
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+/* Hero Style End */
+
+.hero-form {
+  background-color: #fce138;
+  color:#024e76;
+  padding: 20px;
+  width: 500px;
+  border: solid 3px #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
+}
+
+.hero-form h3 {
+margin: 0px;
+font-size: 24px;
+}
+
+.hero-form {
+  margin: 5px 0 15px 0;
+}
+
